shopping cart layout and styling

--- a/navbar.html
+++ b/navbar.html
@@ -109,7 +109,7 @@
 
             position: absolute;
             top: 6px;
-            right: 15px;
+            right: 35px;
             width: 13px;
 
             font-weight: 700;
@@ -132,6 +132,9 @@
             }
             .logo img {
                 width: 100px;
+            }
+            .right div {
+                right: 15px;
             }
         }
     </style>
